@@ -47,12 +47,6 @@ window.open('?m=invoice&id={$newinvoice.invoice}&original={$newinvoice.original}
 		document.setcustomer.submit();
 	}
 
-	function reset_customer()
-        {
-	        if (document.setcustomer.customerid.value)
-	                document.setcustomer.customer.value = document.setcustomer.customerid.value;
-	}
-
 	function setPayTime(type)
 	{
 		var list = document.setcustomer.elements['invoice[paytime_default]'];
@@ -179,17 +173,11 @@ window.open('?m=invoice&id={$newinvoice.invoice}&original={$newinvoice.original}
 			{trans("Customer:")}
 		</TD>
 		<TD style="width: 99%;" class="nobr">
-			{if $customers}
-			<SELECT size="1" name="customer" onChange="document.setcustomer.customerid.value=document.setcustomer.customer.value">
-				<OPTION value="0">{trans("... select customer ...")}</OPTION>
-				{foreach from=$customers item=c}
-				<OPTION value="{$c.id}"{if $c.id == $customer.id || $invoice.customerid == $c.id} selected{/if}>{$c.customername|truncate:"40":"...":true} ({$c.id|string_format:"%04d"})</OPTION>
-				{/foreach}
-			</SELECT>
-			{trans("or Customer ID:")}
+			{if isset($customer.id)}
+			{customerlist form="setcustomer" customers=$customers selected=$customer.id selectname="customer" inputname="customerid"}
+			{else}
+			{customerlist form="setcustomer" customers=$customers selected=$invoice.customerid selectname="customer" inputname="customerid"}
 			{/if}
-			<INPUT type="text" name="customerid" value="{if $customer.id}{$customer.id}{else}{$invoice.customerid}{/if}" size="5"{if $customers} onfocus="reset_customer()" onchange="reset_customer()"{/if} {tip text="Enter customer ID"}>
-			<a href="javascript: void(0);" onClick="return customerchoosewin(document.setcustomer.customerid);" {tip text="Click to search customer"}>{trans("Search")}&nbsp;&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
 	<TR>
