@@ -25,6 +25,7 @@ version ?.??.?? (????-??-??):
   - invoices.show_all_accounts allows to display all customer bank accounts
     on invoices [chilan]
   - allow to select customer for all imported transactions [wawryk/chilan]
+  - replaced all customer selectiors by smarty customerlist function [chilan]
 
 version 1.11.19 (2015-12-21):
 
